修改了index文件

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head><title>hello github</title></head>
 <body>
-hello world
+	<h1>hello world<h1>
+	<h2>hello git<h2>
+	<h3>hello markdown<h3>
 
 </body>
 
